@@ -1,3 +1,5 @@
+13 Nov 2001 Fix halt and clear subchannel on CTC type devices - Jan Jaeger
+13 Nov 2001 Fix logmsg macro to appear as a singular statement - Jan Jaeger
 09 Nov 2001 Add HMC cdrom type IPL support - Jan Jaeger
 09 Nov 2001 Fix hang in synchronize_broadcast - Greg Smith
 09 Nov 2001 Make MODEL_DEPENDENT more specific with CS and STCM - Paul Leisy
